# toy-duration-predictor

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.ipynb  test.py  test_wandb.py
sample/gv/: SINGER_16_10TO29_CLEAR_FEMALE_BALLAD_C0632.json  SINGER_66_30TO49_HUSKY_MALE_DANCE_C2835.json
sample/mssv/: ba_05688_-4_a_s02_m_02.mid  ba_09303_+0_a_s02_m_02.mid
src/toy_duration_predictor/: __init__.py  load.py  train.py  train_fastai.py  train_lightning.py  train_optuna.py  train_ray_optuna.py  train_torch.py  train_torch_ray.py  upload.py
src/toy_duration_predictor/_legacy/: train_fastai.py  train_jax.py  train_tensorflow.py  train_torch_mlops.py  train_torch_vanilla.py
src/toy_duration_predictor/preprocess/: __init__.py  mssv.py  utils.py
