[project]
name = "toy-duration-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ccsss", email = "chansol0505@naver.com" }
]
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.6.0",
    "midii>=0.1.19",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "ray[data,serve,train,tune]>=2.47.1",
    "torch>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "rich>=14.0.0",
    "ruff>=0.12.0",
]
